# blood-donation-system

./: .gitignore  LICENSE  README.md  compose.build.yaml  compose.yaml  package.json
backend/: Cargo.toml  Dockerfile  clorinde.toml  config.example.toml  data.sql  schema.sql
backend/database/ctypes/: Cargo.toml
backend/database/ctypes/src/: lib.rs
backend/database/queries/: account.sql  answer.sql  appointment.sql  blog.sql  blood_bag.sql  blood_request.sql  chat_history.sql  comment.sql  dashboard.sql  donation.sql  health.sql  question.sql  tag.sql
backend/src/: doc.rs  error.rs  main.rs  state.rs
backend/src/config/: bcrypt.rs  blood_threshold.rs  cors.rs  email.rs  jwt.rs  mod.rs  oidc.rs  rag.rs  redis.rs  schedule_time.rs
backend/src/controller/: mod.rs
backend/src/controller/account/: create_staff.rs  delete.rs  get.rs  get_all.rs  is_applied.rs  is_donatable.rs  me.rs  mod.rs  next_donatable_date.rs  update.rs
backend/src/controller/appointment/: approve.rs  create.rs  done.rs  get.rs  get_all.rs  get_answer.rs  get_by_donor_id.rs  get_by_member_id.rs  mod.rs  reject.rs  stats.rs  update_status.rs
backend/src/controller/auth/: login.rs  logout.rs  me.rs  mod.rs  register.rs
backend/src/controller/blog/: create.rs  delete.rs  get.rs  get_all.rs  mod.rs  update.rs
backend/src/controller/blood_bag/: create.rs  delete.rs  get.rs  get_all.rs  mod.rs  stats.rs  update.rs
backend/src/controller/blood_request/: create.rs  delete.rs  get.rs  get_all.rs  get_by_member_id.rs  get_recommended.rs  mod.rs  stats.rs  update.rs
backend/src/controller/chat/: get_all.rs  mod.rs  prompt.rs
backend/src/controller/comment/: create.rs  delete.rs  get_by_blog_id.rs  mod.rs  update.rs
backend/src/controller/dashboard/: blood_group_distribution.rs  donation_trend.rs  donation_trends.rs  mod.rs  request_trend.rs  request_trends.rs  stats.rs
backend/src/cron_job_scheduler/: blood_storage.rs  mod.rs
backend/src/middleware/: cors.rs  mod.rs  prometheus.rs  session.rs
backend/src/util/: blood.rs  blood_compatible.rs  custom_validator.rs  jwt.rs  mod.rs  notification.rs  oidc.rs  pagination.rs  rag.rs  validation.rs
(+307 files in other folders)
