[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
rag = ["rig-core", "rig-qdrant", "qdrant-client"]
redis = ["tower-sessions-redis-store"]
cron-job = []
monitoring = ["axum-prometheus", "axum-tracing-opentelemetry", "init-tracing-opentelemetry"]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-prometheus = { version = "0.8.0", optional = true }
axum-tracing-opentelemetry = { version = "0.29.0", optional = true }
bcrypt = "0.17.0"
bon = "3.6.4"
chrono = "0.4.41"
config = { version = "0.15.11", default-features = false }
ctypes = { path = "./database/ctypes" }
database = { path = "./database/generated" }
futures = "0.3.31"
init-tracing-opentelemetry = { version = "0.29.0", features = ["tracing_subscriber_ext"], optional = true }
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.17",  default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
model-mapper = "0.6.1"
openidconnect = "4.0.0"
qdrant-client = { version = "1.14.0", optional = true }
rig-core = { version = "=0.11.1", features = ["derive", "rayon"], optional = true }
rig-qdrant = { version =  "=0.1.12", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = { version = "0.16.0", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi", "fmt", "chrono", "smallvec", "std", "tracing-log"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"]  }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum-test = "17.3.0"
